--- a/Server/template/dashboard.html
+++ b/Server/template/dashboard.html
@@ -7,24 +7,47 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/dashboard/nav.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <script type="application/javascript" src="/static/js/nav.js" defer></script>
 </head>
 <body>
-    <header class="nav--lateral">
-        <div class="nav--logo"></div>
-        <nav class="nav--left">
-            <ul class="nav--lef__top">
-                <li class="nav--item">
+    <header class="nav-lateral">
+        <div class="nav-logo">
+            <a href="/">
+                <div class="logo"></div>
+            </a>
+        </div>
+        <nav class="nav-left">
+            <ul class="nav-lef_top">
+                <li class="nav-item">
                     <a href="#">
-                        <i class="bi bi-house-door-fill"></i>
+                        <i class="bi bi-speedometer2"></i>
                         <span>Dashboard</span>
+                        <i class="bi bi-chevron-double-right"></i>
                     </a>
                 </li>
-                <li class="nav--item">
-                    <a href="#">
-                        <i class="bi bi-house-door-fill"></i>
-                        <span>Statistiques</span>
-                    </a>
-                </li>
+                <div class="nav-sub_menu_group">
+                    <li class="nav-item nav-item_sub-menu">
+                        <a href="#">
+                            <i class="bi bi-hdd"></i>
+                            <span>Logs</span>
+                            <i class="bi bi-chevron-right"></i>
+                        </a>
+                        <ul class="nav-sub_menu">
+                            <li class="nav-sub_item">
+                                <a href="#">
+                                    <span>Details</span>
+                                    <i class="bi bi-chevron-double-right"></i>
+                                </a>
+                            </li>
+                            <li class="nav-sub_item">
+                                <a href="#">
+                                    <span>Ressources</span>
+                                    <i class="bi bi-chevron-double-right"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </div>
             </ul>
         </nav>
     </header>
