--- a/Server/static/css/dashboard/dashboard.css
+++ b/Server/static/css/dashboard/dashboard.css
@@ -111,6 +111,11 @@ span.table-item {
 }
 .box-body {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding: 10px 20px 10px;
+}
+.box-body pie-chart {
+    height: 150px;
+    width: 150px;
+    margin: 15px 30px;
 }
