--- a/Server/template/dashboard.html
+++ b/Server/template/dashboard.html
@@ -61,7 +61,7 @@
 				<div class="table-container">
 					<div class="table-header">
 						<div class="table-header-top">
-							<span>Logs</span>
+							<h3>Logs</h3>
 						</div>
 						<div class="table-header-bottom">
 							<span class="table-item header_item-date">Date</span>
@@ -152,7 +152,7 @@
 				<div class="box-container">
 					<div class="box-header">
 						<div class="box-header-top">
-							<span>Statistiques utilisation</span>
+							<h3>Statistiques utilisation</h3>
 						</div>
 					</div>
 					<div class="box-body">
@@ -166,7 +166,7 @@
 				<div class="table-container">
 					<div class="table-header">
 						<div class="table-header-top">
-							<span>Machines connectées</span>
+							<h3>Machines connectées</h3>
 						</div>
 						<div class="table-header-bottom">
 							<span class="table-item header_item-machine_name">Nom de la machine</span>
@@ -201,13 +201,13 @@
 				<div class="box-container">
 					<div class="box-header">
 						<div class="box-header-top">
-							<span>Informations système</span>
+							<h3>Informations système</h3>
 						</div>
 					</div>
 					<div class="box-body">
 						<div class="box-row">
 							<div class="box-chart">
-								<h3>Processeur :</h3>
+								<h4>Processeur :</h4>
 								<pie-chart data="25;75" donut="0.4" labels="Utilisé;Libre"></pie-chart>
 							</div>
 							<div class="box-data">
@@ -217,8 +217,8 @@
 						</div>
 						<div class="box-row">
 							<div class="box-chart">
-								<h3>RAM :</h3>
-								<pie-chart data="40;60" donut="0.4" labels="Utilisé;Libre"></pie-chart>
+								<h4>RAM :</h4>
+								<pie-chart data="43.78;57.22" donut="0.4" labels="Utilisé;Libre"></pie-chart>
 							</div>
 							<div class="box-data">
 								<p>Uptime : <span id="uptime">5j 10h 38min 56s</span></p>
