--- a/Server/static/css/style.css
+++ b/Server/static/css/style.css
@@ -5,7 +5,7 @@
     outline: none;
 }
 body {
-    font-family: 'PT Sans', sans-serif;
+    font-family: "Segoe UI", sans-serif;
     overflow-x: hidden;
     background-color: var(--white-color);
     color: var(--black-color);
